--- a/index.css
+++ b/index.css
@@ -93,7 +93,7 @@ body {
 
 .ca{
     color: var(--warna);
-    padding-left: 37%;
+    text-align: center;
     font-size: var(--ukuran);
     background-color:  var(--latar);
     line-height: auto;
